# sunset

./: .gitignore  README.md  pyproject.toml
docs/: BREADCRUMBS.md  INITIAL_PLAN.md  PLAN.md  SPEC.md
src/sunset/: __init__.py  errors.py  main.py
src/sunset/atmosphere/: provider.py
src/sunset/atmosphere/profiles/: __init__.py  earth.py  mars.py  titan.py  venus.py
src/sunset/caption/: generator.py
src/sunset/color/: __init__.py  encoding.py  spectral.py  tonemapping.py
src/sunset/geometry/: resolver.py
src/sunset/metadata/: __init__.py  embedder.py
src/sunset/models/: __init__.py  atmosphere.py  bodies.py  observer.py  scene.py  spectral.py
src/sunset/optics/: __init__.py  integrator.py
src/sunset/renderer/: __init__.py  engine.py  stars.py
src/sunset/visibility/: __init__.py  resolver.py
tests/: test_atmosphere.py  test_caption.py  test_color.py  test_geometry.py  test_integration.py  test_main.py  test_metadata.py  test_models.py  test_optics.py  test_renderer.py  test_structure.py  test_visibility.py
