[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sunset"
version = "0.1.0"
description = "Physically plausible sunset renderer for Solar System bodies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "Pillow>=11.0.0",
    "skyfield>=1.50",
    "colour-science>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
sunset = "sunset.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
